Fix popups on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2482,6 +2482,10 @@ button:disabled,
 
 /* Magnific popup */
 
+.mfp-zoom-out-cur {
+	overflow: hidden;
+}
+
 .mfp-content img.mfp-img {
 	display: block;
 	max-height: 100%;
